--- a/CalculandoDatas/app/src/main/res/layout/activity_main.xml
+++ b/CalculandoDatas/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ECF4F4"
-    android:backgroundTint="#E5EBEC"
-    android:foregroundTint="#131D57"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -16,14 +13,9 @@
         android:id="@+id/txtNome"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#131D57"
-        android:drawableTint="#19214A"
         android:ems="10"
-        android:foregroundTint="#052137"
         android:hint="Nome"
-        android:inputType="textPersonName"
-        android:textColor="#161F55"
-        android:textColorHighlight="#1E2757" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/textView4"
@@ -36,36 +28,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
-        android:datePickerMode="spinner"
-        android:dayOfWeekBackground="#131D57"
-        android:foregroundTint="#131D57"
-        android:headerBackground="#131D57"
-        android:yearListSelectorColor="#08243A" />
+        android:datePickerMode="spinner" />
 
     <EditText
         android:id="@+id/txtPresente"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#131D57"
         android:ems="10"
         android:hint="Que presente deseja ganhar?"
         android:inputType="text" />
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="112dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#131D57"
-        android:foregroundTint="#131D57"
-        android:shadowColor="#131D57"
-        android:text="Enviar"
-        app:strokeColor="#131D57" />
+        android:text="Adicionar" />
 
     <TextView
         android:id="@+id/txtMensagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:text="" />
+
 
 
 </LinearLayout>
