--- a/Elevador/app/src/main/res/layout/activity_main.xml
+++ b/Elevador/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,69 +13,118 @@
         android:layout_height="wrap_content"
         android:text="Você está no"
         android:textColor="#070707"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
     <TextView
         android:id="@+id/andarAtual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:textColor="#070707"
+        android:textSize="40dp"
+        android:textStyle="bold"
         android:text="Andar atual" />
 
-    <TextView
-        android:id="@+id/qtdPessoas"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textColor="#F1EDED"
-        android:backgroundTint="#A190FF"
-        android:text="" />
+        android:background="@drawable/circulo"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:paddingTop="30dp">
+        <TextView
+            android:id="@+id/qtdPessoas"
+            android:textColor="@color/white"
+            android:text="0"
+            android:textSize="50dp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"/>
 
-    <EditText
+        <TextView
+            android:textColor="@color/white"
+            android:text="pessoa(s) no\nelevador"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+
         android:id="@+id/andarDigitado"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
         android:hint="Digite um andar"
-        android:inputType="number" />
+        >
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:layout_marginTop="30dp"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:id="@+id/btnSolicitarAndar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:backgroundTint="#5EB2D8"
-        android:text="IR PARA O ANDAR SELECIONADO" />
+        android:layout_marginHorizontal="-10dp"
+        android:backgroundTint="#D71C94F4"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="   IR PARA O ANDAR SELECIONADO   " />
 
 
     <TextView
         android:id="@+id/menssagemComplementar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:layout_marginTop="80dp"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:textColor="#DD0B0A0A"
         android:text="Alguém irá..." />
 
-
-    <Button
-        android:id="@+id/btnEntrar"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:backgroundTint="#439746"
-        android:text="ENTRAR" />
-
-    <Button
-        android:id="@+id/btnSair"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:backgroundTint="#FF0000"
-        android:text="SAIR" />
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
+
+        <Button
+            android:id="@+id/btnEntrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#439746"
+            android:layout_marginRight="20dp"
+            android:text="ENTRAR" />
+
+        <Button
+            android:id="@+id/btnSair"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#D12626"
+            android:text="SAIR" />
+
+    </LinearLayout>
 
 </LinearLayout>
