--- a/MinhaAgenda/app/src/main/res/layout/activity_main.xml
+++ b/MinhaAgenda/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
 
-        android:id="@+id/Nome"
+        android:id="@+id/nome"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="40dp"
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
     </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
 
-            android:id="@+id/Numero"
+            android:id="@+id/numero"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="40dp"
             android:layout_width="match_parent"
@@ -126,21 +126,24 @@
             android:background="@drawable/lupa" />
     </LinearLayout>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="5dp"
-            >
-
             <TextView
                 android:id="@+id/listaContatos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="10dp"
+                android:textSize="18dp"
+                android:textColor="#0B0A0A"
                 android:text="Lista de Contatos"/>
-        </FrameLayout>
 
-
+        <Button
+            android:id="@+id/btnVoltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:visibility="invisible"
+            android:text="Voltar" />
     </LinearLayout>
 
 </ScrollView>
