--- a/Elevador/app/src/main/res/layout/activity_main.xml
+++ b/Elevador/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,99 +15,108 @@
         android:textColor="#070707"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
+   <TextView
         android:id="@+id/andarAtual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:textColor="#070707"
         android:textSize="40dp"
         android:textStyle="bold"
-        android:text="Andar atual" />
+        android:text="Andar atual"
+       app:layout_constraintTop_toTopOf="@+id/mensagemAndar"
+       app:layout_constraintLeft_toLeftOf="@+id/mensagemAndar"/>
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/circulo"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:paddingTop="30dp">
-        <TextView
-            android:id="@+id/qtdPessoas"
-            android:textColor="@color/white"
-            android:text="0"
-            android:textSize="50dp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_gravity="center"/>
 
-        <TextView
-            android:textColor="@color/white"
-            android:text="pessoa(s) no\nelevador"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_gravity="center"/>
-    </LinearLayout>
+       <TextView
+           android:id="@+id/qtdPessoas"
+           android:textColor="@color/white"
+           android:text="0"
+           android:textSize="50dp"
+           android:textAlignment="center"
+           android:textStyle="bold"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:background="@drawable/circulo"
+           app:layout_constraintRight_toRightOf="parent"
+           app:layout_constraintLeft_toLeftOf="parent"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintVertical_bias="0.3"
+           tools:ignore="MissingConstraints" />
+
+       <TextView
+           android:id="@+id/pessoasnoelevador"
+           android:textColor="@color/white"
+           android:text="pessoa(s) no\nelevador"
+           android:textSize="20dp"
+           android:textStyle="bold"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           app:layout_constraintRight_toRightOf="parent"
+           app:layout_constraintLeft_toLeftOf="parent"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintVertical_bias="0.35"
+           tools:ignore="MissingConstraints" />
+
 
 
     <com.google.android.material.textfield.TextInputLayout
 
         android:id="@+id/andarDigitado"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite um andar"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintVertical_bias="0.58"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
         >
 
         <com.google.android.material.textfield.TextInputEditText
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:layout_marginTop="30dp"
+
             />
 
     </com.google.android.material.textfield.TextInputLayout>
     <Button
-        android:id="@+id/btnSolicitarAndar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="-10dp"
-        android:backgroundTint="#D71C94F4"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="   IR PARA O ANDAR SELECIONADO   " />
+         android:id="@+id/btnSolicitarAndar"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_marginHorizontal="20dp"
+         android:backgroundTint="#D71C94F4"
+         android:text="   IR PARA O ANDAR SELECIONADO   "
+        app:layout_constraintVertical_bias="0.68"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
     <TextView
         android:id="@+id/menssagemComplementar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:textStyle="bold"
         android:textSize="25dp"
         android:textColor="#DD0B0A0A"
-        android:text="Alguém irá..." />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        android:text="Alguém irá..."
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSolicitarAndar" />
 
 
         <Button
@@ -115,7 +124,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#439746"
-            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/menssagemComplementar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.3"
             android:text="ENTRAR" />
 
         <Button
@@ -123,8 +136,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#D12626"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/menssagemComplementar"
+            app:layout_constraintLeft_toRightOf="@+id/btnEntrar"
             android:text="SAIR" />
 
-    </LinearLayout>
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
