--- a/MinhaAgenda/app/src/main/res/layout/activity_main.xml
+++ b/MinhaAgenda/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/pessoal"
                 android:checked="true"
+                android:buttonTint="@color/btn"
                 android:onClick="onRadioButtonClicked"
                 tools:ignore="OnClick" />
 
@@ -63,6 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/trabalho"
+                android:buttonTint="@color/btn"
                 android:onClick="onRadioButtonClicked"/>
 
         </RadioGroup>
