--- a/MinhaAgenda/app/src/main/res/layout/activity_main.xml
+++ b/MinhaAgenda/app/src/main/res/layout/activity_main.xml
@@ -4,29 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/fundo"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <com.google.android.material.textfield.TextInputLayout
 
-        android:id="@+id/nome"
-        style="@style/padrao"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/nome"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+
+            android:id="@+id/nome"
+            style="@style/padrao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            />
+            android:hint="@string/nome"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
 
             android:id="@+id/numero"
@@ -34,38 +35,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/celular"
-            app:layout_constraintTop_toBottomOf="@+id/nome"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/nome">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            />
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <RadioGroup
             android:id="@+id/radiogrup"
+            style="@style/padrao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/padrao"
             app:layout_constraintTop_toBottomOf="@+id/numero">
 
-            <RadioButton android:id="@+id/pessoal"
+            <RadioButton
+                android:id="@+id/pessoal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/pessoal"
-                android:checked="true"
                 android:buttonTint="@color/btn"
+                android:checked="true"
                 android:onClick="onRadioButtonClicked"
+                android:text="@string/pessoal"
                 tools:ignore="OnClick" />
 
-            <RadioButton android:id="@+id/trabalho"
+            <RadioButton
+                android:id="@+id/trabalho"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/trabalho"
                 android:buttonTint="@color/btn"
-                android:onClick="onRadioButtonClicked"/>
+                android:onClick="onRadioButtonClicked"
+                android:text="@string/trabalho" />
 
         </RadioGroup>
 
@@ -76,80 +77,75 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/referencias"
-            app:layout_constraintTop_toBottomOf="@+id/radiogrup"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/radiogrup">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
                 android:layout_marginTop="5dp"
-                />
+                android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
-       <Button
+        <Button
             android:id="@+id/btnSalvar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/btn"
             android:layout_marginTop="16dp"
+            android:backgroundTint="@color/btn"
             android:text="@string/salvar"
-            app:layout_constraintTop_toBottomOf="@+id/informacao"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/informacao" />
 
 
-
-        <com.google.android.material.textfield.TextInputLayout
+        <!--<com.google.android.material.textfield.TextInputLayout
 
             android:id="@+id/pesquisar"
             style="@style/pesquisar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/pesquisae"
-            app:layout_constraintTop_toBottomOf="@+id/btnSalvar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/btnSalvar">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
                 android:layout_marginTop="5dp"
-                />
+                android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnPesquisar"
             style="@style/lupa"
-            app:layout_constraintLeft_toRightOf="@+id/pesquisar"
-            app:layout_constraintBottom_toBottomOf="@+id/pesquisar"/>
+            app:layout_constraintBottom_toBottomOf="@+id/pesquisar"
+            app:layout_constraintLeft_toRightOf="@+id/pesquisar" />
 
 
         <TextView
-                android:id="@+id/listaContatos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/padrao"
-                android:textSize="18dp"
-                android:textColor="@color/lista"
-                android:text="@string/lista"
-                app:layout_constraintTop_toBottomOf="@id/pesquisar"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                  android:id="@+id/listaContatos"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  style="@style/padrao"
+                  android:textSize="18dp"
+                  android:textColor="@color/lista"
+                  android:text="@string/lista"
+                  app:layout_constraintTop_toBottomOf="@id/pesquisar"
+                  app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <Button
-            android:id="@+id/btnVoltar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/padrao"
-            android:visibility="invisible"
-            android:text="@string/voltar"
-            app:layout_constraintTop_toBottomOf="@+id/listaContatos"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+          <Button
+              android:id="@+id/btnVoltar"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              style="@style/padrao"
+              android:visibility="invisible"
+              android:text="@string/voltar"
+              app:layout_constraintTop_toBottomOf="@+id/listaContatos"
+              app:layout_constraintLeft_toLeftOf="parent"
+              app:layout_constraintRight_toRightOf="parent"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+</ScrollView>
 
 
