--- a/MinhaAgenda/app/src/main/res/layout/activity_second.xml
+++ b/MinhaAgenda/app/src/main/res/layout/activity_second.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,62 +7,66 @@
     android:background="@color/fundo"
     android:orientation="vertical"
     tools:context=".SecondActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/pesquisar"
+        style="@style/pesquisar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/pesquisae"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
-        >
-        <com.google.android.material.textfield.TextInputLayout
-
-            android:id="@+id/pesquisar"
-            style="@style/pesquisar"
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/pesquisae"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+            android:layout_marginTop="18dp"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/btnPesquisar"
+        style="@style/lupa"
+        app:layout_constraintBottom_toBottomOf="@+id/pesquisar"
+        app:layout_constraintLeft_toRightOf="@+id/pesquisar">
 
-        <Button
-            android:id="@+id/btnPesquisar"
-            style="@style/lupa"
-            app:layout_constraintBottom_toBottomOf="@+id/pesquisar"
-            app:layout_constraintLeft_toRightOf="@+id/pesquisar">
+    </Button>
+    <TextView
+        android:id="@+id/listaContatos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/padrao"
+        android:text="@string/lista"
+        android:textColor="#070707"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnVoltar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+    </TextView>
 
-        </Button>
-        <TextView
-            android:id="@+id/listaContatos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/padrao"
-            android:text="@string/lista"
-            android:textColor="#070707"
-            android:textStyle="bold"
-            android:textSize="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/pesquisar"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-        </TextView>
+    <Button
+        android:id="@+id/btnVoltar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/voltar"
+        app:layout_constraintTop_toBottomOf="@+id/pesquisar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
-        <Button
-            android:id="@+id/btnVoltar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/voltar"
-            app:layout_constraintTop_toBottomOf="@+id/listaContatos"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+    </Button>
 
-        </Button>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvContatos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/listaContatos"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:listitem="@layout/item_contato"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
